src/main/java/application/testData/invalidRandomAddresses/medium/RandomAddressesWithAcronyms.java
package application.testData.invalidRandomAddresses.medium;

public class RandomAddressesWithAcronyms {
}
